--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1",
+    "node-wav": "0.0.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "uuid": "^9.0.0"
